tests/compile-fail/invalid_char.stderr
error: Undefined Behavior: interpreting an invalid 32-bit value as a char: 0x00ffffff
 --> $DIR/invalid_char.rs:9:14
  |
9 |     let _x = c == 'x'; //~ ERROR interpreting an invalid 32-bit value as a char: 0x00ffffff
  |              ^^^^^^^^ interpreting an invalid 32-bit value as a char: 0x00ffffff
  |
  = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
  = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
          
  = note: inside `main` at $DIR/invalid_char.rs:9:14

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

